# pheromone

./: CMakeLists.txt  README.md
client/anna_client/: setup.py
client/anna_client/anna/: anna_pb2.py  base_client.py  client.py  lattices.py  shared_pb2.py
client/pheromone/: bench_common.py  client.py  mr_framework.py  utils.py
common/cmake/: CodeCoverage.cmake  DownloadProject.cmake  DownloadProjectHelper.cmake  clang-format.cmake
common/include/: types.hpp
common/shm-ipc/src/: buffer.cpp  (+5 more)
conf/: anna-base.yml  config.yml
deploy/cluster/: README.md
dockerfiles/: start-pheromone.sh
examples/cpp/: CMakeLists.txt
examples/cpp/function_chain/: inc.cpp
examples/cpp/map_reduce/: mapper_template.cpp  reducer_template.cpp  sort_map.cpp  sort_partition.cpp  sort_reduce.cpp  sort_utils.cpp  wc_map.cpp  wc_reduce.cpp
examples/cpp/risk_query/: filter_loc.cpp  query_count.cpp  risk_level.cpp
include/coordinator/: coord_handlers.hpp
include/function_interface/: cpp_function.hpp
include/scheduler/: comm_helper.hpp  object_handlers.hpp
scripts/: build.sh  build_all.sh  invoke.sh  start-client-test.sh  start_all.sh  stop_all.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client_test.cpp
src/coordinator/: CMakeLists.txt  app_register_handler.cpp  bucket_op_handler.cpp  coordinator.cpp  func_call_handler.cpp  notify_handler.cpp  query_handler.cpp  trigger_op_handler.cpp
src/executor/: CMakeLists.txt  executor_server.cpp
src/manager/: CMakeLists.txt  manager_server.cpp
src/scheduler/: CMakeLists.txt  object_handlers.cpp  scheduler_server.cpp
(+66 files in other folders)
